--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<div>Website Git tutorial</div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>Website Git tutorial</div>
+</body>
+</html>
